--- a/ManyViewsGameBase/Packages/manifest.json
+++ b/ManyViewsGameBase/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.ide.rider":"3.0.27",
     "com.unity.collab-proxy": "2.2.0",
     "com.unity.device-simulator.devices": "1.0.0",
     "com.unity.feature.development": "1.0.1",
